add the index file for week 2

--- a/b2/w2/index.html
+++ b/b2/w2/index.html
@@ -1,7 +1,19 @@
-<html>
-<head><title>My GitHub Page</title></head>
-<body>
-    <h2>GitHub 個人網頁測試</h2>
-    <h2>Hello, World!</h2>
+<html><head><title>Morning Revival Week 2</title></head><body>
+<font size="+2">
+<b>第二週: 信的內在意義</b><br/>
+<a href="mr1.html">週一</a><br/>
+<a href="mr2.html">週二</a><br/>
+<a href="mr3.html">週三</a><br/>
+<a href="mr4.html">週四</a><br/>
+<a href="mr5.html">週五</a><br/>
+<a href="mr6.html">週六</a><br/>
+<br/>
+<b>Week Two: The Intrinsic Significance of Faith</b><br/>
+<a href="mre1.html">Monday</a><br/>
+<a href="mre2.html">Tuesday</a><br/>
+<a href="mre3.html">Wednesday</a><br/>
+<a href="mre4.html">Thursday</a><br/>
+<a href="mre5.html">Friday</a><br/>
+<a href="mre6.html">Saturday</a><br/>
+</table>
 </body></html>
-
