update the format of the mr pages

--- a/b2/w2/index.html
+++ b/b2/w2/index.html
@@ -1,19 +1,18 @@
 <html><head><title>Morning Revival Week 2</title></head><body>
-<font size="+2">
+<font size="+3">
 <b>第二週: 信的內在意義</b><br/>
-<a href="mr1.html">週一</a><br/>
-<a href="mr2.html">週二</a><br/>
-<a href="mr3.html">週三</a><br/>
-<a href="mr4.html">週四</a><br/>
-<a href="mr5.html">週五</a><br/>
-<a href="mr6.html">週六</a><br/>
-<br/>
+<ul><li><a href="mr1.html">週一</a></li>
+<li><a href="mr2.html">週二</a></li>
+<li><a href="mr3.html">週三</a></li>
+<li><a href="mr4.html">週四</a></li>
+<li><a href="mr5.html">週五</a></li>
+<li><a href="mr6.html">週六</a></li>
+</ul><br/>
 <b>Week Two: The Intrinsic Significance of Faith</b><br/>
-<a href="mre1.html">Monday</a><br/>
-<a href="mre2.html">Tuesday</a><br/>
-<a href="mre3.html">Wednesday</a><br/>
-<a href="mre4.html">Thursday</a><br/>
-<a href="mre5.html">Friday</a><br/>
-<a href="mre6.html">Saturday</a><br/>
-</table>
-</body></html>
+<ul><li><a href="mre1.html">Monday</a></li>
+<li><a href="mre2.html">Tuesday</a></li>
+<li><a href="mre3.html">Wednesday</a></li>
+<li><a href="mre4.html">Thursday</a></li>
+<li><a href="mre5.html">Friday</a></li>
+<li><a href="mre6.html">Saturday</a></li>
+</ul></body></html>
