--- a/b2/w2/mre1.html
+++ b/b2/w2/mre1.html
@@ -1,5 +1,7 @@
 <html><head><title>Morning Revival English</title></head><body>
+<center><font size=+2>2-1 The Intrinsic Significance of Faith</font></center>
 <font size="+1">
+<h2>Week Two: The Intrinsic Significance of Faith</h2>
 <h3>Outline</h3>
 <p>I. Faith is the substantiation of God's facts:</p>
 <p>A. Hebrews 11:1 says, “Now faith is the substantiation of things hoped for, the conviction of things not seen”; the word substantiation means the capacity to make something real (colors are substantiated by our eyes, sounds by our ears, etc.); thus, it is one thing for objects to exist, and it is another thing for these things to be substantiated.</p>
