--- a/b2/w2/mre2.html
+++ b/b2/w2/mre2.html
@@ -1,5 +1,7 @@
 <html><head><title>Morning Revival English</title></head><body>
+<center><font size=+2>2-2 The Intrinsic Significance of Faith</font></center>
 <font size="+1">
+<br/>
 <h3>Outline</h3>
 <p>III. Faith means that we believe that God is and we are not— Heb. 11:5-6, 1-2; 2 Cor. 4:13, 18:</p>
 <p>A. Without faith it is impossible to be well pleasing to God, to make God happy—Heb. 11:6a.</p>
