--- a/b2/w2/mre3.html
+++ b/b2/w2/mre3.html
@@ -1,5 +1,7 @@
 <html><head><title>Morning Revival English</title></head><body>
+<center><font size=+2>2-3 The Intrinsic Significance of Faith</font></center>
 <font size="+1">
+<br/>
 <h3>Outline</h3>
 <p>V. Faith is rooted in God's great, eternal, and divine facts covenanted to us in His holy Word; the believers' subjective faith is in their spirit, which makes their mingled spirit a spirit of faith—2 Cor. 4:13 and footnote 2:</p>
 <p>A. We must exercise our spirit of faith to believe in the fact that God is love—1 John 4:8.</p>
