--- a/b2/w2/mre4.html
+++ b/b2/w2/mre4.html
@@ -1,5 +1,7 @@
 <html><head><title>Morning Revival English</title></head><body>
+<center><font size=+2>2-4 The Intrinsic Significance of Faith</font></center>
 <font size="+1">
+<br/>
 <h3>Outline</h3>
 <p>4. We must exercise our spirit of faith to believe that the ascension of the Lord has put Him far above the power of Satan—Eph. 1:20-22; 2:6; 6:11, 13.</p>
 <p>5. We must exercise our spirit of faith to believe that the victory of the Lord is complete and that our whole life is included in this victory; we must see that we have already overcome and that we fight from a position of victory in order to maintain our victory; we can overcome because we are all included in the Lord as the leading Overcomer; He is the Head, center, reality, life, and nature of the man-child, and the manchild as the following overcomers is the Lord's Body—Rev. 3:21; 12:5.</p>
