--- a/b2/w2/mre5.html
+++ b/b2/w2/mre5.html
@@ -1,5 +1,7 @@
 <html><head><title>Morning Revival English</title></head><body>
+<center><font size=+2>2-5 The Intrinsic Significance of Faith</font></center>
 <font size="+1">
+<br/>
 <h3>Outline</h3>
 <p>VI. All our spiritual possessions in Christ are realized and actualized by faith:</p>
 <p>A. Faith opens the door to every blessing that is ours in Christ—2 Tim. 3:15; Eph. 1:3.</p>
