--- a/b2/w2/mre6.html
+++ b/b2/w2/mre6.html
@@ -1,5 +1,7 @@
 <html><head><title>Morning Revival English</title></head><body>
+<center><font size=+2>2-6 The Intrinsic Significance of Faith</font></center>
 <font size="+1">
+<br/>
 <h3>Outline</h3>
 <p>VII. “Beware, brothers, lest perhaps there be in any one of you an evil heart of unbelief in falling away from the living God. But exhort one another each day, as long as it is called ‘today,' lest any one of you be hardened by the deceitfulness of sin…‘Today if you hear His voice, do not harden your hearts'”—Heb. 3:12-13, 15a:</p>
 <p>A. Falling away also means “turning away”; when we exercise our spirit of faith and keep our heart turned to the Lord, the veil is taken away, and we can behold Him as the God of glory with an unveiled face, so that we may be continually transfused with Him, with His believing element, so that we can live by Him as our faith and remain in the process of being transformed from one degree of glory to another degree of glory into the same image of the resurrected and glorified Christ—2 Cor. 4:13; 3:16-18; cf. Gen. 1:26; Isa. 43:7.</p>
